# nodewatch

./: .dockerignore  .env.example  .gitignore  DECISIONS.md  LICENSE  NodeWatch_个人开发与Vibe_Coding交付文档_阿里云版.docx  NodeWatch_个人开发与Vibe_Coding交付文档_阿里云版.md  PROGRESS.md  README.md
agent/: config.example.toml  nodewatch-agent.spec  pyproject.toml
agent/install/: linux-install.sh  linux-uninstall.sh  windows-install.ps1  windows-p6-offline-test.ps1  windows-uninstall.ps1
agent/nodewatch_agent/: __init__.py  cache.py  client.py  collector.py  config.py  identity.py  main.py  retry.py
agent/tests/: test_cache.py  test_collector.py  test_identity.py  test_retry.py
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260714_01_create_auth_tables.py  20260715_02_create_devices.py  20260715_03_create_metrics.py  20260715_04_create_disk_latest.py  20260715_05_create_alerts.py
backend/app/: __init__.py  cli.py  main.py
backend/app/api/: deps.py
backend/app/core/: config.py  logging.py  middleware.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  agent_token.py  alert.py  audit_log.py  device.py  metric.py  user.py  user_session.py
backend/app/repositories/: users.py
backend/app/schemas/: alert.py  auth.py  device.py  metric.py
backend/app/services/: alerts.py  auth.py  bootstrap.py  demo_seed.py  devices.py  login_rate_limit.py  metrics.py  scheduler.py
backend/tests/: conftest.py  test_alerts.py  test_auth.py  test_cli.py  test_devices.py  test_health.py  test_metrics.py
deploy/: Dockerfile  (+7 more)
(+53 files in other folders)
