[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nodewatch-backend"
version = "0.1.0"
description = "NodeWatch FastAPI 服务端"
requires-python = ">=3.12"
dependencies = [
  "apscheduler>=3.11,<4.0",
  "alembic>=1.15,<2.0",
  "argon2-cffi>=23.1,<26.0",
  "fastapi>=0.115,<1.0",
  "psycopg[binary]>=3.2,<4.0",
  "pydantic-settings>=2.8,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=8.3,<9.0",
  "ruff>=0.11,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
